Added channel support
